# nct-protonated-methane

./: .gitignore  README.md  pyproject.toml  requirements.txt
neuralvib/: __init__.py  inference.py  train.py
neuralvib/molecule/: __init__.py  molecule_base.py
neuralvib/molecule/ch4/: __init__.py  configuration.py  molecule.py  pes.py  pes_base.py  pes_lee_ccsdt_ccpvtz.py  trans2normal.py
neuralvib/molecule/ch5plus/: __init__.py  ch3d2.py  ch5_plus.py  ch5_plus_jacobi.py  ch5_plus_no_carbon.py  equilibrium_config.py  stationary_points.py
neuralvib/molecule/ch5plus/JBB_Full_PES/: JBBCH5ppotential.pyf  Makefile  __init__.py  convert_coors.py  jbbjax.py
neuralvib/molecule/ch5plus/McCoy_NN_PES/: get_nn_pes_info.py  params_flax  trans2jax.py
neuralvib/molecule/ch5plus/pyscf_PES/: CCSD.py  __init__.py  dft.py  hf.py  hf_gpu.py  mp2.py  (+2 more)
neuralvib/molecule/utils/: __init__.py  init_molecule.py
neuralvib/networks/: __init__.py  flow_MoleNet.py  flow_RNVP.py  utils.py
neuralvib/networks/tests/: __init__.py  test_MoleNet.py
neuralvib/utils/: boltzmann_fac.py  ckeckpoint.py  convert.py  energy_estimator.py  export_data.py  frame.py  initialize.py  key.py  loss.py  mcmc.py  network_pretrain.py  parallel.py  update.py
neuralvib/utils/tests/: test_energy_estimator.py  test_initialize.py  test_kinetic.py  test_network_pretrain.py  test_previous_network_pretrain.py  test_update.py
neuralvib/wfbasis/: __init__.py  basis.py  wf_ansatze.py
neuralvib/wfbasis/normal_coors/: __init__.py  wf.py
neuralvib/wfbasis/tests/: __init__.py  test_basis.py  test_wf_ansatze.py
(+30 files in other folders)
